# Automated-Marking-System-for-Web-Development-Coursework

./: .gitignore  README.md  codex_deep_rewrite_prompt.md  list.txt  main.py  pyproject.toml
ams/: __init__.py  ams_users.db  assessors.py  batch.py  browser_automation.py  cache.db  cli.py  css_required.py  css_static.py  deterministic_tests.py  evaluation.py  html_required.py  html_static.py  js_required.py  js_static.py  models.py  normalisation.py  pdf_exports.py  php_required.py  php_static.py  pipeline.py  profiles.py  reporting.py  scoring.py  sql_required.py  sql_static.py  static_analysis.py  submission.py  webui.py
ams/ams_analytics/: test_assignment1_analytics.json
ams/analytics/: __init__.py  assignment_analytics.py  batch_analytics.py  graphs.py  insights.py
docker/: Dockerfile.sandbox  build.sh  seccomp-profile.json
evaluation_dataset/: eval_profile.json  eval_profile_llm.json  generate_dataset.py  manifest.json
fixtures/: expectations.json
tests/: conftest.py  test_aggregation.py  test_batch_analytics.py  test_batch_bundle.py  test_batch_reports_zip.py  test_batch_runner.py  test_cli_profile_mark.py  test_consistency_assessor.py  test_css_required_assessor.py  test_css_static_assessor.py  test_demo_runner.py  test_evaluation_harness.py  test_html_required_assessor.py  test_html_static_assessor.py  test_js_required_assessor.py  test_js_static_assessor.py  test_phase1_5_tightening.py  test_phase1_profile_requirements.py  test_php_required_assessor.py  test_php_static_assessor.py  test_pipeline_smoke.py  test_run_artifacts_route.py  test_score_quantization.py  test_scoring.py  test_scoring_engine.py  test_scoring_with_runtime_evidence.py  test_sql_required_assessor.py  test_sql_static_assessor.py  test_student_identity_extraction.py  test_submission_processing.py  test_submission_processor.py  test_webui.py  test_webui_regression.py
tmp_debug_out/: batch_summary.csv  batch_summary.json
tools/: demo_full_system.py  verify_arbitration.py
(+356 files in other folders)
