[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ams"
version = "0.1.0"
description = "CLI-first automated marking system skeleton"
authors = [{name = "Automated System", email = "noreply@example.com"}]
requires-python = ">=3.10"

[project.scripts]
ams = "ams.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
