[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ams"
version = "0.1.0"
description = "CLI-first automated marking system skeleton"
authors = [{name = "Automated System", email = "noreply@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "requests>=2.28",
    "pydantic>=2.0",
    "numpy>=1.24",
    "fpdf2>=2.7.0",
]

[project.scripts]
ams = "ams.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
llm = ["openai>=1.0"]
dev = ["pytest>=7.0", "playwright>=1.41.0", "matplotlib>=3.7.0", "openai>=1.0"]
demo = ["matplotlib>=3.7.0"]

[tool.pytest.ini_options]
markers = [
    "uses_llm: opt a test into real LLM-backed behaviour when that is the behaviour under test",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
